@@ -68,8 +68,8 @@ module Spec
       @@constraint_classes[:string] = StringArgConstraint
       
       def initialize(args)
-        if args == [:any_args] then @expected_params = nil
-        elsif args == [:no_args] then @expected_params = []
+        if [:any_args] == args then @expected_params = nil
+        elsif [:no_args] == args then @expected_params = []
         else @expected_params = process_arg_constraints(args)
         end
       end
